# ACCESS_Resample_Orbits

./: .gitignore  CF_metadata.f90  fdice.f90  io_nc.f90  meson.build  sat_names_dict.txt
AMSR2/: AMSR2_resample_version.f90  AMSR2_start_orbit_resample_30km_all_regions.py  AMSR2_start_orbit_resample_70km_all_regions.py  README.md  RSS_L1A.f90  Update_AMSR2_Orbits.md  amsr2_L2_Tb_io.f90  amsr2_access_entry.f90  amsr2_access_lib.f90  amsr2_data_files_v8.f90  amsr2_define_filenames_v8.f90  amsr2_geolocation_extra.f90  amsr_geolocation.f90  amsr_id_module.f90  amsr_rss_l1a_input_module.deprecated.f  filename_routines.f90  io_filenames_v8.f90  l2_module_amsr_v8.f90  l2_tb_module_ACCESS.f90  meson.build  plot_file_times_AMSR2_70km.py  process_amsr2_l2b_orbit_tb_ACCESS.f90  process_amsr2_l2b_orbit_tb_ACCESS_test.f90  read_binary_head.deprecated.f  satellite_constants_amsr2.f90
AMSR2/counts_to_tb/: avg_cal_counts.f90  ckocntb.f  convert_ta_to_tb.f90  fd_cold_mirror_rfi_v8.f  fd_cold_mirror_rfi_v8.f90  fd_geostationary_latlon.f90  fd_leap_sec.f  fd_monthly_wind.f90  fd_ta_adjusted_v8.f90  fd_tbsss_clm.f90  fd_tcold.f90  fd_thot.f  field_routines.f  find_therm.f  moon_in_cold_view.f  pre_nut_routines.f90  resample_89.f  resample_ta.f90  reverse_agc.f90  rfi_flag.f90  spillover_routines.f90  tatb_amsr2.f90  tatb_routines_ops.f
AMSR2/sun_moon/: get_diurnal_sst.f  get_diurnal_sst_v2.f  moon_vector.deprecated.f90  sun_moon.f90  sun_vector.deprecated.f
SSMI/: ReadMe.md  extra_locs.f90  make_tb_orbit_folders.py  meson.build  module_ssmi_l1c.f90  process_ssmi_l2b_orbit_tb_ACCESS.f90  ssmi_F15_start_orbit_resample_all_70km_global_75_69501.py  ssmi_L2_Tb_io.f90  ssmi_filename_routines.f90  ssmi_id_module.f90
SSMI/geolocation/: ecef_conversions.f90  local_proj.f90  local_proj.py
compatibility/: NAN_support_ieee.f90  NAN_support_intel.f90
date_utilities/: date_utilities.f90  time_conversions.f90  time_conversions_extra.f90
gridding/: earth_ref_maps.f90  ease2.f90  equirectangular_map_constants.f90  equirectangular_maps.f90  equirectangular_maps64.f90  init_polar_grids.f90  map_type_constants.f90  maps.f90  read_NSIDC_polar_maps.f90  test_new_maps.f90
land_masks/: fdice.f90  landmask.f90  percent_land.f90
logger/: logger.f90
math/: fd_median.f  geolocation_extra_routines.f90  interpolate.f90  math_routines.f90  quaternion_routines.f90  trig_degrees.f90
python/: main.py  make_bat_file.bat  make_bat_file.py  orbit inventory.py  resampled_orbit inventory.py
python/interfaces/: __init__.py
python/interfaces/f90/: access_py_interfaces.f90
python/interfaces/py/: AMSR2_Lib.py  AMSR2_Lib2.py
resample/: resample_ta_CM.f90  resample_ta_polar_map.f90  resample_tb_polar_map.f90  resample_tb_rect_map.f90  wgs84.f90
syspgm/: fileexist.f90  get_cmd_arg.f90  open_file_routines.f90  percent_land.f90
